<resources>
    <string name="app_name">Pace Calc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="timeText">Time</string>
    <string name="distanceText">Distance</string>
    <string name="timeHint">hh:mm:ss</string>
    <string name="distanceHint">00.00 mi</string>
    <string name="resultPace">Pace</string>
    <string name="resultPaceHint">00.00 mph</string>
    <string name="menuitem_calculate_pace">Calculate Pace</string>
    <string name="menuitem_calculate_time">Calculate Time</string>
    <string name="menuitem_calculate_distance">Calculate Distance</string>
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
</resources>