<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="20dip"
    android:paddingLeft="20dip">

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeText" />
    <EditText
        android:id="@+id/timeBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeHint"
        android:inputType="time"/>
    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distanceText" />
    <EditText
        android:id="@+id/distanceBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distanceHint"
        android:inputType="number"/>
    <TextView
        android:id="@+id/resultPace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultPace" />
    <TextView
        android:id="@+id/resultPaceBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resultPaceHint" />
    <Button
        android:id="@+id/resultPaceCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultText"/>
    </LinearLayout>