<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingRight="20dip"
    android:paddingLeft="20dip">

    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distanceText"
        />
    <EditText
        android:id="@+id/distanceBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distanceHint"
        android:inputType="number"/>
    <TextView
        android:id="@+id/resultPace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultPaceHint"
        />
    <EditText
        android:id="@+id/resultPaceBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/distanceHint"
        android:inputType="number"/>
    <TextView
        android:id="@+id/timeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeText" />
    <TextView
        android:id="@+id/timeBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timeText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate!"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>